# gama-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PLAN.md  README.md  buildAndRun.bat
Editor/: CMakeLists.txt
Editor/include/: EditorApp.h
Editor/src/: EditorApp.cpp  main.cpp
GamaCore/: CMakeLists.txt
GamaCore/include/: LuaEngine.h  Renderer.h  Scene.h  Window.h
GamaCore/src/: Entity.cpp  Renderer.cpp  Scene.cpp
GamaCore/src/Scripting/: LuaEngine.cpp
GamaCore/src/shaders/: fragment.glsl
Runtime/: CMakeLists.txt
Runtime/src/: main.cpp
include/: Entity.h  Renderer.h  Shader.h  Window.h
src/: Entity.cpp  LuaTest.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
src/shaders/: fragment.glsl
